# seaplayer-audio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.tests/: test-mpsndstreamer.py
seaplayer_audio/: __init__.py  _types.py  exceptions.py  filesignatures.py  filesinatures.md  functions.md  functions.py  queues.py  types.py
seaplayer_audio/__drivers/: multiprocessdriver.py
seaplayer_audio/audiosources/: __init__.py  fileaudiosource.py  urlaudiosource.py  urlio.py
seaplayer_audio/base/: __init__.py  audiosource.py  driver.py  exception.py  sndstreamer.py  streamer.py  track.py
seaplayer_audio/drivers/: multiprocessdriver.py
seaplayer_audio/streamers/: __init__.py  _mprutils.py  callbackstreamersnd.py  mprstreamersnd.py  threadstreamersnd.py
seaplayer_audio/streamers/mpstreamersnd/: __init__.py  _types.py  process.py  steamer.py
tests/: test_speed.py
tests/libs/: __init__.py  logio.py  timing.py  units.py
