[tool.poetry]
name = "seaplayer-audio"
version = "0.1.0"
description = "Audio playback library."
authors = ["Romanin <60302782+romanin-rf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
typing-extensions = "^4.12.2"
numpy = "^2.1.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
