[tool.poetry]
name = "seaplayer-audio"
version = "0.1.0"
description = "A library for playing audio streams."
authors = ["Romanin <60302782+romanin-rf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
typing-extensions = "^4.12.2"
numpy = "^2.1.3"
pillow = "^11.0.0"
sounddevice = "^0.5.1"
soundfile = "^0.12.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "NOTSET"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
pythonpath = [
    ".", "./tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

