[tool.poetry]
name = "seaplayer-audio"
version = "0.4.0"
description = "A library for async/sync playback audio."
repository = "https://github.com/romanin-rf/seaplayer-audio"
authors = ["Romanin <60302782+romanin-rf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "seaplayer", "audio", "sound", "stream", 
    "play", "playback", "read", "io"
]
classifiers = [
    "Framework :: AsyncIO",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Multimedia :: Sound/Audio",
    #"Topic :: Multimedia :: Sound/Audio :: MIDI",              # TODO: IN PLANE!
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.10"
typing-extensions = "^4.12.2"
numpy = "^2.1.3"
pillow = "^11.0.0"
sounddevice = "^0.5.1"
soundfile = "^0.12.1"
mutagen = "^1.47.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.extras]
dev = ["pytest", "rich"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "./tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

